[gd_scene load_steps=26 format=2]

[ext_resource path="res://Picture/autoEnemy.png" type="Texture" id=1]
[ext_resource path="res://Script/Player.gd" type="Script" id=2]
[ext_resource path="res://Script/Enemy.gd" type="Script" id=3]
[ext_resource path="res://Scenet/TestTrack.tscn" type="PackedScene" id=4]
[ext_resource path="res://Picture/autoPlayer.png" type="Texture" id=5]
[ext_resource path="res://Picture/vaista.png" type="Texture" id=6]
[ext_resource path="res://icon.png" type="Texture" id=7]
[ext_resource path="res://Script/Este.gd" type="Script" id=8]
[ext_resource path="res://Script/waypoints.gd" type="Script" id=9]
[ext_resource path="res://Background.png" type="Texture" id=10]
[ext_resource path="res://Picture/0888x1033y.png" type="Texture" id=11]
[ext_resource path="res://Picture/mutka.png" type="Texture" id=12]
[ext_resource path="res://Scenet/Track1.tscn" type="PackedScene" id=13]
[ext_resource path="res://Script/Enemyslower.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 56, 24 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 31.9827 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 56, 24 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64, 32 )

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="CircleShape2D" id=6]
radius = 76.8971

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 32 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 8, 88 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 88 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 80 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 80 )

[node name="World" type="Node2D"]

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 1207.16, 150.552 )
rotation = -3.17362
scale = Vector2( 0.75, 0.75 )
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="Player"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2( 0, -3.05176e-05 )
shape = SubResource( 2 )

[node name="Control" type="Control" parent="Player"]
margin_left = -32.0
margin_top = -3.05176e-05
margin_right = 8.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="KinematicBody2D" parent="."]
position = Vector2( 529.607, 2219.88 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="EnemySprite" type="Sprite" parent="Enemy"]
modulate = Color( 0.568627, 0.168627, 0.168627, 1 )
self_modulate = Color( 0.568627, 0.168627, 0.168627, 1 )
position = Vector2( 95.9877, -16.0173 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
offset = Vector2( -480, 80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy"]
visible = false
position = Vector2( -0.0123291, -0.017334 )
shape = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="Enemy"]
visible = false
position = Vector2( -8, 3.05176e-05 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enemy/Area2D"]
position = Vector2( 8, 0 )
shape = SubResource( 4 )

[node name="Detection" type="Node2D" parent="Enemy"]
position = Vector2( 60.7452, -1.49012e-08 )

[node name="Middle" type="RayCast2D" parent="Enemy/Detection"]
rotation = -1.57079
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="fLeft" type="RayCast2D" parent="Enemy/Detection"]
rotation = -2.18166
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="mLeft" type="RayCast2D" parent="Enemy/Detection"]
rotation = -1.83259
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="fRight" type="RayCast2D" parent="Enemy/Detection"]
rotation = -0.959931
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="mRight" type="RayCast2D" parent="Enemy/Detection"]
rotation = -1.309
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Long" type="Node2D" parent="Enemy/Detection"]

[node name="LongRight" type="RayCast2D" parent="Enemy/Detection/Long"]
rotation = -1.0472
enabled = true
cast_to = Vector2( 0, 200 )

[node name="LongLeft" type="RayCast2D" parent="Enemy/Detection/Long"]
rotation = -2.09439
enabled = true
cast_to = Vector2( 0, 200 )

[node name="Camera2D" type="Camera2D" parent="Enemy"]
current = true

[node name="Enviroment" type="Node2D" parent="."]

[node name="GreenGround" type="Sprite" parent="Enviroment"]
position = Vector2( 30.7122, -182.617 )
scale = Vector2( 10, 10 )
z_index = -4
texture = ExtResource( 10 )

[node name="Track1" parent="Enviroment" instance=ExtResource( 13 )]

[node name="TestTrack" parent="Enviroment" instance=ExtResource( 4 )]
position = Vector2( 1146.6, 2025.47 )
z_index = -4
script = null

[node name="EnemySlow1" type="KinematicBody2D" parent="Enviroment/TestTrack"]
modulate = Color( 0.517647, 0.509804, 0.509804, 1 )
position = Vector2( -350.677, 167.337 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="EnemySprite" type="Sprite" parent="Enviroment/TestTrack/EnemySlow1"]
modulate = Color( 0.568627, 0.168627, 0.168627, 1 )
self_modulate = Color( 0.568627, 0.168627, 0.168627, 1 )
position = Vector2( 95.9877, -16.0173 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
offset = Vector2( -480, 80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/TestTrack/EnemySlow1"]
visible = false
position = Vector2( -0.0123291, -0.017334 )
shape = SubResource( 3 )

[node name="Detection" type="Node2D" parent="Enviroment/TestTrack/EnemySlow1"]
position = Vector2( 60.7452, -1.49012e-08 )

[node name="Middle" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow1/Detection"]
rotation = -1.57079
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="fLeft" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow1/Detection"]
rotation = -2.18166
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="mLeft" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow1/Detection"]
rotation = -1.83259
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="fRight" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow1/Detection"]
rotation = -0.959931
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="mRight" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow1/Detection"]
rotation = -1.309
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Long" type="Node2D" parent="Enviroment/TestTrack/EnemySlow1/Detection"]

[node name="LongRight" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow1/Detection/Long"]
rotation = -1.0472
enabled = true
cast_to = Vector2( 0, 200 )

[node name="LongLeft" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow1/Detection/Long"]
rotation = -2.09439
enabled = true
cast_to = Vector2( 0, 200 )

[node name="Camera2D" type="Camera2D" parent="Enviroment/TestTrack/EnemySlow1"]

[node name="EnemySlow2" type="KinematicBody2D" parent="Enviroment/TestTrack"]
modulate = Color( 0.517647, 0.509804, 0.509804, 1 )
position = Vector2( -148.466, 248.305 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="EnemySprite" type="Sprite" parent="Enviroment/TestTrack/EnemySlow2"]
modulate = Color( 0.568627, 0.168627, 0.168627, 1 )
self_modulate = Color( 0.568627, 0.168627, 0.168627, 1 )
position = Vector2( 95.9877, -16.0173 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
offset = Vector2( -480, 80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/TestTrack/EnemySlow2"]
visible = false
position = Vector2( -0.0123291, -0.017334 )
shape = SubResource( 3 )

[node name="Detection" type="Node2D" parent="Enviroment/TestTrack/EnemySlow2"]
position = Vector2( 60.7452, -1.49012e-08 )

[node name="Middle" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow2/Detection"]
rotation = -1.57079
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="fLeft" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow2/Detection"]
rotation = -2.18166
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="mLeft" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow2/Detection"]
rotation = -1.83259
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="fRight" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow2/Detection"]
rotation = -0.959931
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="mRight" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow2/Detection"]
rotation = -1.309
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Long" type="Node2D" parent="Enviroment/TestTrack/EnemySlow2/Detection"]

[node name="LongRight" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow2/Detection/Long"]
rotation = -1.0472
enabled = true
cast_to = Vector2( 0, 200 )

[node name="LongLeft" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow2/Detection/Long"]
rotation = -2.09439
enabled = true
cast_to = Vector2( 0, 200 )

[node name="Camera2D" type="Camera2D" parent="Enviroment/TestTrack/EnemySlow2"]

[node name="EnemySlow3" type="KinematicBody2D" parent="Enviroment/TestTrack"]
modulate = Color( 0.517647, 0.509804, 0.509804, 1 )
position = Vector2( 233.931, 205.464 )
rotation = -0.456672
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="EnemySprite" type="Sprite" parent="Enviroment/TestTrack/EnemySlow3"]
modulate = Color( 0.568627, 0.168627, 0.168627, 1 )
self_modulate = Color( 0.568627, 0.168627, 0.168627, 1 )
position = Vector2( 95.9877, -16.0173 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )
offset = Vector2( -480, 80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/TestTrack/EnemySlow3"]
visible = false
position = Vector2( -0.0123291, -0.017334 )
shape = SubResource( 3 )

[node name="Detection" type="Node2D" parent="Enviroment/TestTrack/EnemySlow3"]
position = Vector2( 60.7452, -1.49012e-08 )

[node name="Middle" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow3/Detection"]
rotation = -1.57079
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="fLeft" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow3/Detection"]
rotation = -2.18166
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="mLeft" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow3/Detection"]
rotation = -1.83259
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="fRight" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow3/Detection"]
rotation = -0.959931
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="mRight" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow3/Detection"]
rotation = -1.309
scale = Vector2( 0.792942, 3.31405 )
enabled = true
cast_to = Vector2( 0, 30 )

[node name="Long" type="Node2D" parent="Enviroment/TestTrack/EnemySlow3/Detection"]

[node name="LongRight" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow3/Detection/Long"]
rotation = -1.0472
enabled = true
cast_to = Vector2( 0, 200 )

[node name="LongLeft" type="RayCast2D" parent="Enviroment/TestTrack/EnemySlow3/Detection/Long"]
rotation = -2.09439
enabled = true
cast_to = Vector2( 0, 200 )

[node name="Camera2D" type="Camera2D" parent="Enviroment/TestTrack/EnemySlow3"]

[node name="End" type="Area2D" parent="Enviroment/TestTrack"]
position = Vector2( 620.939, -55.0607 )
rotation = 0.228613
scale = Vector2( 7.64523, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/TestTrack/End"]
shape = SubResource( 5 )

[node name="straight" type="Sprite" parent="Enviroment"]
position = Vector2( 1349.06, 594.3 )
scale = Vector2( 0.788278, 1.06743 )
z_index = -3
texture = ExtResource( 11 )

[node name="curve" type="Sprite" parent="Enviroment"]
position = Vector2( 1778.98, 644.898 )
scale = Vector2( 0.74478, 0.866964 )
z_index = -4
texture = ExtResource( 12 )

[node name="ulkoseina" type="KinematicBody2D" parent="Enviroment/curve"]
position = Vector2( -2388.59, -743.858 )
scale = Vector2( 1.34268, 1.15345 )

[node name="ulkoseinacol" type="CollisionPolygon2D" parent="Enviroment/curve/ulkoseina"]
position = Vector2( 0, 0.42041 )
polygon = PoolVector2Array( 163.796, 513.744, 299.768, 529.826, 418.749, 560.132, 513.036, 566.867, 571.404, 547.785, 601.711, 520.846, 662.324, 436.661, 698.242, 408.6, 730.794, 402.988, 750.998, 408.6, 793.652, 429.927, 836.305, 459.111, 940.694, 548.908, 1054.06, 551.153, 1101.21, 538.805, 1266.21, 518.601, 1476.11, 515.234, 1527.74, 480.437, 1578.25, 463.6, 1615.29, 461.356, 1650.09, 472.58, 1686.01, 496.152, 1721.93, 525.336, 1752.23, 542.173, 1784.79, 551.153, 1809.48, 548.908, 1834.17, 536.561, 1861.11, 517.479, 1939.69, 461.356, 1965.5, 454.621, 1996.93, 453.498, 2031.73, 464.723, 2040.71, 466.968, 2068.77, 429.927, 2102.44, 406.355, 2130.5, 396.253, 2161.93, 392.885, 2197.85, 401.865, 2231.53, 420.947, 2253.98, 449.009, 2271.93, 479.315, 2285.4, 529.826, 2288.77, 573.602, 2279.79, 607.276, 2266.32, 645.439, 2237.14, 680.236, 2200.1, 702.685, 2152.95, 713.91, 2112.54, 706.052, 2076.63, 684.726, 2049.69, 649.929, 2033.97, 618.5, 1993.56, 607.276, 1961.01, 609.521, 1923.97, 622.99, 1898.15, 644.317, 1865.6, 669.011, 1845.4, 685.848, 1812.85, 702.685, 1789.28, 707.175, 1760.09, 701.563, 1730.91, 685.848, 1701.72, 660.031, 1662.44, 637.582, 1628.76, 617.378, 1598.46, 614.01, 1569.27, 617.378, 1541.21, 629.725, 1497.44, 653.297, 1477.23, 664.521, 1222.43, 666.766, 1204.47, 683.603, 1175.29, 697.073, 1142.74, 706.052, 1089.98, 711.665, 1039.47, 712.787, 978.858, 715.032, 853.143, 639.827, 803.754, 616.255, 756.611, 605.031, 717.325, 610.643, 694.875, 631.97, 661.202, 662.277, 630.895, 686.971, 575.894, 703.808, 508.547, 711.665, 454.669, 708.298, 370.484, 704.93, 293.034, 699.318, 230.176, 689.216, 184.155, 676.869, 174.053, 673.501, 178.543, 509.622, 165.073, 509.622, 159.461, 681.358, 292.649, 710.451, 508.339, 721.382, 580.656, 710.451, 636.576, 693.212, 703.007, 638.134, 724.029, 619.634, 756.824, 614.168, 800.971, 624.259, 823.959, 636.46, 979.241, 724.325, 1145.32, 714.655, 1179.79, 705.826, 1211.75, 690.269, 1228.57, 676.815, 1478.35, 679.113, 1549.07, 639.827, 1573.75, 627.202, 1599.82, 624.259, 1624.21, 627.202, 1662.44, 649.929, 1697.79, 669.667, 1726.8, 694.474, 1758.75, 712.973, 1789.86, 718.439, 1815.09, 716.337, 1849.15, 694.474, 1870.59, 678.076, 1902.54, 650.747, 1928.19, 631.407, 1961.41, 617.111, 1992.1, 616.27, 2027, 624.259, 2041.29, 654.111, 2071.14, 690.269, 2109.41, 712.133, 2153.13, 720.962, 2202.32, 708.769, 2242.27, 686.906, 2272.12, 650.747, 2287.71, 611.593, 2295.66, 573.805, 2293.45, 529.077, 2279.95, 477.883, 2262.49, 444.548, 2237.89, 414.784, 2205.35, 392.957, 2162.09, 385.814, 2129.94, 389.782, 2100.97, 396.529, 2066.45, 422.721, 2042.64, 451.294, 2035.1, 457.247, 2001.37, 444.151, 1965.25, 447.723, 1937.87, 454.072, 1891.04, 488.201, 1859.29, 512.409, 1832.7, 529.871, 1788.65, 542.967, 1764.84, 538.204, 1729.52, 519.156, 1697.38, 490.186, 1644.2, 458.041, 1615.63, 450.897, 1574.35, 454.072, 1519.19, 476.693, 1468.39, 504.075, 1263.96, 504.009, 1101.21, 525.336, 1054.06, 536.561, 945.185, 533.193, 844.163, 452.376, 801.51, 420.947, 756.611, 398.498, 734.162, 389.518, 693.753, 396.253, 654.467, 424.314, 592.732, 511.866, 569.16, 532.071, 513.951, 556.617, 419.199, 547.425, 299.769, 514.111, 163.531, 502.619 )
disabled = true

[node name="circle" type="KinematicBody2D" parent="Enviroment/curve"]
position = Vector2( 505.167, -100.966 )

[node name="circleCol" type="CollisionShape2D" parent="Enviroment/curve/circle"]
shape = SubResource( 6 )
disabled = true

[node name="Tubes" type="Node2D" parent="Enviroment"]

[node name="Hidaste" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 1243, 425.793 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste2" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 1148.12, 335.251 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste2"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste2"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste3" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 1241.5, 220.254 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste3"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste3"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste4" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 811.006, 114.415 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste4"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste4"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste5" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 665.922, 35.9272 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste5"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste5"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste6" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 527.974, 114.415 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste6"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste6"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste7" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 438.784, 24.0351 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste7"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste7"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste8" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 335.323, 125.118 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste8"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste8"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste9" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 645.706, 477.123 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste9"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste9"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste10" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 686.139, 494.961 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste10"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste10"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste11" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 727.761, 503.286 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste11"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste11"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste12" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 770.573, 500.907 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste12"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste12"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste13" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 813.384, 494.961 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste13"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste13"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Hidaste14" type="KinematicBody2D" parent="Enviroment/Tubes"]
position = Vector2( 852.628, 481.88 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="Enviroment/Tubes/Hidaste14"]
texture = ExtResource( 6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Enviroment/Tubes/Hidaste14"]
polygon = PoolVector2Array( -32, 48, 0, -48, 32, 48 )

[node name="Este" type="KinematicBody2D" parent="Enviroment"]
visible = false
position = Vector2( 376, 48 )
scale = Vector2( 0.1, 1 )
script = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/Este"]
scale = Vector2( 3.79995, 1.04 )
shape = SubResource( 7 )
disabled = true

[node name="Sprite" type="Sprite" parent="Enviroment/Este"]
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 7 )

[node name="StartFinish" type="Area2D" parent="Enviroment"]
position = Vector2( 320, 624 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Enviroment/StartFinish"]
shape = SubResource( 8 )

[node name="waypoints" type="Node2D" parent="."]
script = ExtResource( 9 )

[node name="Waypoint1" type="Area2D" parent="waypoints"]
position = Vector2( 320, 624 )

[node name="areacol" type="CollisionShape2D" parent="waypoints/Waypoint1"]
scale = Vector2( 0.8, 1 )
shape = SubResource( 9 )

[node name="waypointbody" type="KinematicBody2D" parent="waypoints/Waypoint1"]

[node name="bodycol" type="CollisionShape2D" parent="waypoints/Waypoint1/waypointbody"]
scale = Vector2( 0.8, 1 )
shape = SubResource( 9 )
disabled = true

[node name="Waypoint2" type="Area2D" parent="waypoints"]
position = Vector2( 984, 80 )

[node name="areacol2" type="CollisionShape2D" parent="waypoints/Waypoint2"]
shape = SubResource( 10 )

[node name="waypointbody2" type="KinematicBody2D" parent="waypoints/Waypoint2"]

[node name="bodycol2" type="CollisionShape2D" parent="waypoints/Waypoint2/waypointbody2"]
shape = SubResource( 11 )
[connection signal="area_entered" from="Enemy/Area2D" to="Enemy" method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Enemy/Area2D" to="Enemy" method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Enviroment/TestTrack/End" to="Enviroment/TestTrack/EnemySlow1" method="_on_End_body_entered"]
[connection signal="body_exited" from="waypoints/Waypoint1" to="waypoints" method="_on_Waypoint1_body_exited"]
[connection signal="body_exited" from="waypoints/Waypoint2" to="waypoints" method="_on_Waypoint2_body_exited"]
